{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 21,
  "lineage": "4b6c0aaa-1d45-5bc2-7d02-6b4b5898aeeb",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01f0d67e5f9e337ba",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-193-172-69.compute-1.amazonaws.com",
            "public_ip": "34.193.172.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-dev-rajat-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-dev-rajat-us-east-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:internet-gateway/igw-0e24047fd8558e9f7",
            "id": "igw-0e24047fd8558e9f7",
            "owner_id": "384221790116",
            "tags": {
              "Name": "vpc-dev-rajat"
            },
            "tags_all": {
              "Name": "vpc-dev-rajat"
            },
            "vpc_id": "vpc-07654173571556340"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f0d67e5f9e337ba",
            "connectivity_type": "public",
            "id": "nat-0c7cba2e8010c0002",
            "network_interface_id": "eni-00ca832b8fd254be8",
            "private_ip": "10.0.101.92",
            "public_ip": "34.193.172.69",
            "subnet_id": "subnet-09493d135ab3a2756",
            "tags": {
              "Name": "vpc-dev-rajat-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-dev-rajat-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cc73922f1479eda01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c7cba2e8010c0002",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cc73922f1479eda0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e24047fd8558e9f7",
            "id": "r-rtb-05de18deae1b86ade1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05de18deae1b86ade",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:route-table/rtb-0cc73922f1479eda0",
            "id": "rtb-0cc73922f1479eda0",
            "owner_id": "384221790116",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-dev-rajat-private"
            },
            "tags_all": {
              "Name": "vpc-dev-rajat-private"
            },
            "vpc_id": "vpc-07654173571556340"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:route-table/rtb-05de18deae1b86ade",
            "id": "rtb-05de18deae1b86ade",
            "owner_id": "384221790116",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-dev-rajat-public"
            },
            "tags_all": {
              "Name": "vpc-dev-rajat-public"
            },
            "vpc_id": "vpc-07654173571556340"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd321ab3b8116dd4",
            "route_table_id": "rtb-0cc73922f1479eda0",
            "subnet_id": "subnet-0b801043f09ba4d5b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ed9287d8ba5cb4a",
            "route_table_id": "rtb-0cc73922f1479eda0",
            "subnet_id": "subnet-07230024504775ac2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d87a6b8b6ca3b71f",
            "route_table_id": "rtb-0cc73922f1479eda0",
            "subnet_id": "subnet-07078f3dec4ffdc12"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8977cb6acbb0371",
            "route_table_id": "rtb-05de18deae1b86ade",
            "subnet_id": "subnet-09493d135ab3a2756"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d2f8a9e9e144922",
            "route_table_id": "rtb-05de18deae1b86ade",
            "subnet_id": "subnet-046e0e6ea972e6bfd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094efbd1e36df5eca",
            "route_table_id": "rtb-05de18deae1b86ade",
            "subnet_id": "subnet-0b1bc9adfffe15cb1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:subnet/subnet-0b801043f09ba4d5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b801043f09ba4d5b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384221790116",
            "tags": {
              "Name": "vpc-dev-rajat-private-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-dev-rajat-private-us-east-1a"
            },
            "vpc_id": "vpc-07654173571556340"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:subnet/subnet-07230024504775ac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07230024504775ac2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384221790116",
            "tags": {
              "Name": "vpc-dev-rajat-private-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-dev-rajat-private-us-east-1b"
            },
            "vpc_id": "vpc-07654173571556340"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:subnet/subnet-07078f3dec4ffdc12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07078f3dec4ffdc12",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384221790116",
            "tags": {
              "Name": "vpc-dev-rajat-private-us-east-1c"
            },
            "tags_all": {
              "Name": "vpc-dev-rajat-private-us-east-1c"
            },
            "vpc_id": "vpc-07654173571556340"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:subnet/subnet-09493d135ab3a2756",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-09493d135ab3a2756",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "384221790116",
            "tags": {
              "Name": "vpc-dev-rajat-public-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-dev-rajat-public-us-east-1a"
            },
            "vpc_id": "vpc-07654173571556340"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:subnet/subnet-046e0e6ea972e6bfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-046e0e6ea972e6bfd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "384221790116",
            "tags": {
              "Name": "vpc-dev-rajat-public-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-dev-rajat-public-us-east-1b"
            },
            "vpc_id": "vpc-07654173571556340"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:subnet/subnet-0b1bc9adfffe15cb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0b1bc9adfffe15cb1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "384221790116",
            "tags": {
              "Name": "vpc-dev-rajat-public-us-east-1c"
            },
            "tags_all": {
              "Name": "vpc-dev-rajat-public-us-east-1c"
            },
            "vpc_id": "vpc-07654173571556340"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:vpc/vpc-07654173571556340",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd4b82c3f5c3edef",
            "default_route_table_id": "rtb-0acd40e557f64e7db",
            "default_security_group_id": "sg-0d002f1e2e8e78ab8",
            "dhcp_options_id": "dopt-4f9be535",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07654173571556340",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0acd40e557f64e7db",
            "owner_id": "384221790116",
            "tags": {
              "Name": "vpc-dev-rajat"
            },
            "tags_all": {
              "Name": "vpc-dev-rajat"
            }
          }
        }
      ]
    }
  ]
}